# Luna

./: .gitignore  DEMO_SCRIPT.md  DEVLOG.md  README.md  REDESIGN.md  SPEC.md  build.ps1  pyproject.toml
luna/: __init__.py  config.py  db.py  main.py
luna/actions/: apps.py  documents.py  files.py  productivity.py  registry.py  system.py
luna/core/: chat_engine.py  memory.py  ollama_client.py  prompts.py  router.py  voice.py
luna/server/: app.py
luna/server/routes/: actions.py  chat.py  conversations.py  memories.py  misc.py  settings.py  tasks.py  voice.py
luna/ui/: index.html
luna/ui/css/: base.css  chat.css  components.css  layout.css  screens.css  tokens.css
luna/ui/js/: api.js  app.js  markdown.js  router.js  sse.js  state.js  util.js
luna/ui/js/components/: modal.js  shell.js  toast.js
luna/ui/js/screens/: chat.js  memory.js  onboarding.js  privacy.js  settings.js  setup.js  tasks.js
scripts/: smoke.py
