[project]
name = "luna"
version = "0.1.0"
description = "Luna — local-first AI desktop assistant"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "pydantic>=2.9",
    "pywebview>=5.3",
    "python-multipart>=0.0.20",
    "pypdf>=5.1",
    "winotify>=1.1.0 ; platform_system == 'Windows'",
    "sounddevice>=0.5.1",
    "numpy>=2.1",
    "faster-whisper>=1.1.0",
    "pyttsx3>=2.98",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.11",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["luna"]
